@@ -5,36 +5,44 @@ import com.EMS.demo.Entities.RolesAssign;
 import com.EMS.demo.Repositories.EmployeeRepo;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.stereotype.Service;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Service
 public class Security implements UserDetailsService {
-    public EmployeeRepo userRepo;
-    public Security(EmployeeRepo userRepo) {
-        this.userRepo = userRepo;
+    public EmployeeRepo employeeRepo;
+    public Security(EmployeeRepo employeeRepo) {
+        this.employeeRepo = employeeRepo;
     }
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        Employee user = userRepo.findByEmail(username);
-        if (user == null) {
-            throw new UsernameNotFoundException(username);
+        Employee employee = employeeRepo.findByEmail(username);
+        if (employee == null) {
+            throw new UsernameNotFoundException("User not found");
         }
-        else{
-            return new org.springframework.security.core.userdetails.User(
-                    user.getEmpEmail(),user.getPassword(),mapRolesToAuthorities(user.getRoles())
-            );
-        }
+        return new User(
+                employee.getEmail(),
+                employee.getPassword(),
+                employee.getEnabled(),
+                true, true, true,
+                getAuthorities(employee));
     }
-    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(List<RolesAssign> roles){
-        Collection<? extends GrantedAuthority> maproles = roles.stream()
-                .map(role -> new SimpleGrantedAuthority(role.getRoleName()))
-                .collect(Collectors.toList());
-
-        return maproles;
+    public Collection<? extends GrantedAuthority>getAuthorities(Employee employee){
+        return employee.getRoles().stream()
+                .map(RolesAssign::getRoleName)
+                .map(role -> new GrantedAuthority() {
+                    @Override
+                    public String getAuthority() {
+                        return role;
+                    }
+                })
+                .toList();
     }}
